Fixing overflow issue?

--- a/server_root/html/css/gsc.scss
+++ b/server_root/html/css/gsc.scss
@@ -270,6 +270,7 @@ table .invalid {
             background-color: white;
             border-radius: $radius 0;
             overflow-x: auto;
+            overflow-y: hidden;
 
             table {
                 margin: 0;
